2nd commit - add resume and linkedin

--- a/_site.yml
+++ b/_site.yml
@@ -2,13 +2,18 @@ name: "Yay internet!"
 output_dir: "."
 navbar:
   title: "Home"
-  right:
+  left:
     - text: "About"
       href: about.html
+    - text: "Resume"
+      href: resume.html
+  right:
     - icon: fa-envelope fa-lg
       href: mailto:maximumride112@gmail.com
     - icon: fa-github fa-lg
-      href: http://github.com/clementiaboo/
+      href: https://github.com/clementiaboo
+    - icon: fa-linkedin fa-lg
+      href: https://www.linkedin.com/in/clement-li-881696a4/
 output:
   html_document:
     theme: cerulean
