--- a/_site.yml
+++ b/_site.yml
@@ -1,19 +1,28 @@
-name: "Yay internet!"
+name: "Yay Internet!"
 output_dir: "."
+
 navbar:
-  title: "Home"
+  title: "🏠 Home"
   left:
-    - text: "About"
+    - text: "💡 About"
       href: about.html
-    - text: "Resume"
+    - text: "📄 Resume"
       href: resume.html
+
   right:
     - icon: fa-envelope fa-lg
-      href: mailto:maximumride112@gmail.com
+      href: "mailto:maximumride112@gmail.com"
     - icon: fa-github fa-lg
-      href: https://github.com/clementiaboo
+      href: "https://github.com/clementiaboo"
     - icon: fa-linkedin fa-lg
-      href: https://www.linkedin.com/in/clement-li-881696a4/
+      href: "https://www.linkedin.com/in/clement-li-881696a4/"
+
 output:
   html_document:
     theme: cerulean
+    highlight: textmate
+    toc: true
+    toc_float: true
+    smooth_scroll: true
+    code_folding: hide
+    df_print: paged
