--- a/_site.yml
+++ b/_site.yml
@@ -3,20 +3,21 @@ output_dir: "."
 
 navbar:
   left:
+    - text: "Home"
+      href: index.html
     - text: "About"
-      href: "about.html"
+      href: about.html
     - text: "Resume"
-      href: "resume.html"
+      href: resume.html
   right:
-    - icon: fa-envelope
-      href: "mailto:maximumride112@gmail.com"
-    - icon: fa-github
-      href: "https://github.com/clementiaboo"
-    - icon: fa-linkedin
-      href: "https://www.linkedin.com/in/clement-li-881696a4/"
+    - icon: fa-envelope fa-lg
+      href: mailto:maximumride112@gmail.com
+    - icon: fa-github fa-lg
+      href: https://github.com/clementiaboo
+    - icon: fa-linkedin fa-lg
+      href: https://www.linkedin.com/in/clement-li-881696a4/
 
 output:
   html_document:
     theme: cerulean
-    highlight: textmate
     toc: false
